Additional fixes for mobile when and where alignment

--- a/src/Components/FAQ.css
+++ b/src/Components/FAQ.css
@@ -73,6 +73,11 @@
     margin-bottom: 0;
   }
 
+  .faq.container h2 {
+    margin-top: 10vh;
+    font-size: 35px;
+  }
+
   .faq.container p {
     font-size: 15px;
     line-height: 25px;
