--- a/src/Components/WhenAndWhere.css
+++ b/src/Components/WhenAndWhere.css
@@ -93,6 +93,10 @@ hr {
   .article-info {
     width: 90vw;
     text-align: center;
+    align-items: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
   }
